[tool.poetry]
name = "zeonbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^1.1.2"
noise = "^1.2.2"
google-images-search = "^1.3.6"
replit = "^2.0.0"
pytz = "^2021.1"
d = "^0.2.2"
ffmpeg = "^1.4"
youtube_dl = "^2021.6.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
