[tool.poetry]
name = "repl_python3_zeonbot"
version = "0.1.0"
description = ""
authors = ["WillyChng <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
youtube_dl = "^2021.6.6"
"discord.py" = "^1.7.3"
ffmpeg = "^1.4"
pytz = "^2021.1"
replit = "^3.1.0"
PyNaCl = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
